fix: update meta tags to ZeroCode branding

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PULSE - President University Learning System for Engineers</title>
-    <link rel="icon" type="image/png" href="/assets/pulse_logo_icon_1766021911157.png">
+    <title>ZeroCode - Learn to Code from Zero</title>
+    <meta name="description" content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
+    <meta property="og:title" content="ZeroCode - Learn to Code from Zero">
+    <meta property="og:description" content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
+    <meta property="og:type" content="website">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg">
 </head>
 <body>
     <div id="root"></div>
