fix: restore original favicon

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="ZeroCode - Learn to Code from Zero">
     <meta property="og:description" content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
     <meta property="og:type" content="website">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg">
+    <link rel="icon" type="image/png" href="/assets/pulse_logo_icon_1766021911157.png">
 </head>
 <body>
     <div id="root"></div>
