feat: redesign dashboard and profile with premium glass aesthetic, add avatar selection system, and update navigation

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZeroCode - Learn to Code from Zero</title>
-    <meta name="description" content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
-    <meta property="og:title" content="ZeroCode - Learn to Code from Zero">
-    <meta property="og:description" content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
+    <title>ZeroCode | Master Modern Web Development</title>
+    <meta name="description"
+        content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
+    <meta property="og:title" content="ZeroCode | Master Modern Web Development">
+    <meta property="og:description"
+        content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
     <meta property="og:type" content="website">
-    <link rel="icon" type="image/png" href="/assets/pulse_logo_icon_1766021911157.png">
+    <link rel="icon" type="image/png" href="/logo.png">
 </head>
+
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
