--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description"
         content="Master web development from scratch. Learn HTML, CSS, JavaScript, React, and more with hands-on projects.">
     <meta property="og:type" content="website">
-    <link rel="icon" type="image/png" href="/logo.png">
+    <link rel="icon" type="image/png" href="/logo_z.png">
 </head>
 
 <body>
